added a few dashboards and mentee's html folder

--- a/HTML/Mentee-dashboard/Mentee-m-search-results.html
+++ b/HTML/Mentee-dashboard/Mentee-m-search-results.html
@@ -18,7 +18,7 @@
 		/>
 		<link
 			rel="stylesheet"
-			href="../CSS/Mentee's_m_search-result.css"
+			href="/CSS/Mentee's_m_search-result.css"
 		/>
 		<title>Mentee's Mentor Search Results</title>
 	</head>
@@ -31,7 +31,7 @@
 						href="#"
 					>
 						<img
-							src="../Images/dashboard-logo.png"
+							src="/Images/dashboard-logo.png"
 							alt=""
 							class=""
 						/>
@@ -57,7 +57,7 @@
 									class="nav-link active fs-5"
 									id="first-link"
 									aria-current="page"
-									href="../index.html"
+									href="/index.html"
 									>Home</a
 								>
 							</li>
@@ -87,7 +87,7 @@
 									type="submit"
 								/>
 								<img
-									src="../Images/symbols-search.svg"
+									src="/Images/symbols-search.svg"
 									alt=""
 									class="position-absolute top-50 end-0 translate-middle-y me-3"
 									onclick="window.location.href=''"
@@ -95,19 +95,19 @@
 							</div>
 							<div class="dashboard-profile d-flex gap-4 ms-5">
 								<img
-									src="../Images/message.svg"
+									src="/Images/message.svg"
 									alt=""
 								/>
 								<img
-									src="../Images/ci-bell-notification.svg"
+									src="/Images/ci-bell-notification.svg"
 									alt=""
 								/>
 								<img
-									src="../Images/dashboard-profile.svg"
+									src="/Images/dashboard-profile.svg"
 									alt=""
 								/>
 								<img
-									src="../Images/symbols-arrow-drop-down.svg"
+									src="/Images/symbols-arrow-drop-down.svg"
 									alt=""
 								/>
 							</div>
@@ -122,7 +122,7 @@
 				<div class="sidebar d-flex flex-column gap-4">
 					<div class="profile-wrapper d-flex gap-3 mt-4">
 						<img
-							src="../Images/dashboard-profile.svg"
+							src="/Images/dashboard-profile.svg"
 							alt=""
 						/>
 						<div class="profile-content">
@@ -135,40 +135,40 @@
 					>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/home-icon.svg"
+								src="/Images/home-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
+								href="./Mentee-booking-response.html"
 								class="text-black ms-2"
 								>Home</a
 							>
 						</div>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/message.svg"
+								src="/Images/message.svg"
 								alt=""
 							/>
 							<a
-								href=""
+								href="./groups-chats.html"
 								class="text-black ms-2"
 								>Messages</a
 							>
 						</div>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/booking-icon.svg"
+								src="/Images/booking-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
+								href="./bookings.html"
 								class="text-black ms-2"
 								>Bookings</a
 							>
 						</div>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/connection-icon.svg"
+								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
@@ -179,29 +179,29 @@
 						</div>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/milestones-trophy.svg"
+								src="/Images/milestones-trophy.svg"
 								alt=""
 							/>
 							<a
-								href=""
+								href="./achievements.html"
 								class="text-black ms-2"
 								>Milestones</a
 							>
 						</div>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/connection-icon.svg"
+								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
+								href="./group-sessions.html"
 								class="text-black ms-2"
 								>Group sessions</a
 							>
 						</div>
 						<div class="icon-links ps-3">
 							<img
-								src="../Images/settings-icon.png"
+								src="/Images/settings-icon.png"
 								alt=""
 								class="settings-icon"
 							/>
@@ -219,7 +219,7 @@
 					<div class="profile-wrapper d-flex align-items-center gap-4">
 						<div class="profile-img">
 							<img
-								src="../Images/Peter-Profile.svg"
+								src="/Images/Peter-Profile.svg"
 								alt=""
 							/>
 						</div>
@@ -232,23 +232,23 @@
 								Rating:
 								<span class="ms-2">
 									<img
-										src="../Images/star.svg"
+										src="/Images/star.svg"
 										alt=""
 									/>
 									<img
-										src="../Images/star.svg"
+										src="/Images/star.svg"
 										alt=""
 									/>
 									<img
-										src="../Images/star.svg"
+										src="/Images/star.svg"
 										alt=""
 									/>
 									<img
-										src="../Images/star.svg"
+										src="/Images/star.svg"
 										alt=""
 									/>
 									<img
-										src="../Images/star-half.svg"
+										src="/Images/star-half.svg"
 										alt=""
 									/>
 								</span>
@@ -288,7 +288,7 @@
                             <div class="card w-100 border-light  ">
                                 <div class="card-body ms-3">
                                     <img
-                                        src="../Images/christopher-campbell-rdeo-vt-e-7-v-os-unsplash-1.png"
+                                        src="/Images/christopher-campbell-rdeo-vt-e-7-v-os-unsplash-1.png"
                                         alt=""
                                     />
                                     <p class="card-text mb-4">
@@ -297,24 +297,24 @@
                                     </p>
                                     <div class="rating text-center">
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                     </div>
                                     <img
-                                        src="../Images/jurica-koletic-7-yvzy-ze-i-tc-8-unsplash-1.png"
+                                        src="/Images/jurica-koletic-7-yvzy-ze-i-tc-8-unsplash-1.png"
                                         alt=""
                                     />
                                     <p class="card-text mb-3">
@@ -324,23 +324,23 @@
                                     </p>
                                     <div class="rating text-center">
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                         <img
-                                            src="../Images/star.svg"
+                                            src="/Images/star.svg"
                                             alt=""
                                         />
                                     </div>
