mentor signup pages modified

--- a/HTML/Mentor_signup.html
+++ b/HTML/Mentor_signup.html
@@ -56,7 +56,7 @@
 						<div class="form-div mb-3">
 							<p class="fw-medium mb-2">Full Name*</p>
 							<input
-								type="full name"
+								type="text"
 								name="full name"
 								id="full name"
 								placeholder="Full Name"
@@ -78,7 +78,7 @@
                         <div class="form-div mb-3">
 							<p class="fw-medium mb-2">Contact Number*</p>
 							<input
-								type="number"
+								type="tel"
 								name="number"
 								id="number"
 								placeholder="Fill in Telephone number"
