--- a/HTML/mentor_signup2.html
+++ b/HTML/mentor_signup2.html
@@ -64,8 +64,8 @@
                         <div class="form-div mb-3">
 							<p class="fw-medium mb-2">Education*</p>
 							<select
-								name="Gender"
-								id="Gender"
+								name="Education"
+								id="Education"
 								class="border rounded py-2 ps-4 w-100 text-body-secondary"
                                 placeholder="Select Education qualifications"
 							>
