--- a/HTML/mentor_signup3.html
+++ b/HTML/mentor_signup3.html
@@ -56,7 +56,7 @@
 						<div class="form-div mb-3">
 							<p class="fw-medium mb-2">Connect your Calendar(s)*</p>
 							<input
-								type="Calendar"
+								type="date"
 								name="Calendar"
 								id="Calendar"
 								placeholder="Connect to your calendar apps"
@@ -111,8 +111,8 @@
 						</div>
                       
 						<div class="btn-div d-flex justify-content-evenly pt-5 ">
-                            <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='Mentor_signup.html'">Back</button>
-                            <button class="btn btn-lg text-light" >Next</button>
+                            <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='Mentor_signup2.html'">Back</button>
+                            <button class="btn btn-lg text-light " type ="submit" >Finish</button>
                         </div>
 					</form>
 					<p class="text-center my-5">
