added a few more dashboards

--- a/HTML/Mentee-dashboard/Mentee-m-search-results.html
+++ b/HTML/Mentee-dashboard/Mentee-m-search-results.html
@@ -123,11 +123,11 @@
 					<div class="profile-wrapper d-flex gap-3 mt-4">
 						<img
 							src="/Images/dashboard-profile.svg"
-							alt=""
+							alt="" class="w-50"
 						/>
 						<div class="profile-content">
 							<h2 class="fs-4">John Doe</h2>
-							<a href="">View profile</a>
+							<a href="./mentee-profile.html">View profile</a>
 						</div>
 					</div>
 					<div
@@ -257,7 +257,7 @@
 						<button
 							class="btn btn-2 btn-outline-light px-5 py-2"
 							type="submit"
-							onclick="window.location.href=''"
+							onclick="window.location.href='./book-mentor.html'"
 						>
 							Book
 						</button>
