--- a/HTML/Mentee-dashboard/mentee-profile.html
+++ b/HTML/Mentee-dashboard/mentee-profile.html
@@ -113,7 +113,7 @@
                 <div class="profile-wrapper d-flex gap-3 mt-4">
                     <img
                         src="/Images/dashboard-profile.svg"
-                        alt=""
+                        alt="" class="w-50"
                     />
                     <div class="profile-content">
                         <h2 class="fs-4">John Doe</h2>
@@ -151,7 +151,7 @@
                             alt=""
                         />
                         <a
-                            href=""
+                            href="./bookings.html"
                             class="text-black ms-2"
                             >Bookings</a
                         >
