--- a/HTML/Mentee-dashboard/Mentee-booking-response.html
+++ b/HTML/Mentee-dashboard/Mentee-booking-response.html
@@ -124,7 +124,7 @@
 					<div class="profile-wrapper d-flex gap-3 mt-4">
 						<img
 							src="/Images/dashboard-profile.svg"
-							alt=""
+							alt="" class="w-50"
 						/>
 						<div class="profile-content">
 							<h2 class="fs-4">John Doe</h2>
