--- a/HTML/Mentee-dashboard/ag-group-chat.html
+++ b/HTML/Mentee-dashboard/ag-group-chat.html
@@ -7,10 +7,6 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-		/>
-		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
@@ -18,9 +14,9 @@
 		/>
 		<link
 			rel="stylesheet"
-			href="/CSS/mentor-dashboard.css"
+			href="/CSS/ag-group-chat.css"
 		/>
-		<title>Mentee's Booking Response</title>
+		<title>Africa Agility Group Chat</title>
 	</head>
 	<body>
 		<header>
@@ -90,7 +86,7 @@
 									src="/Images/symbols-search.svg"
 									alt=""
 									class="position-absolute top-50 end-0 translate-middle-y me-3"
-									onclick="window.location.href='Mentee-m-search-results.html'"
+									onclick="window.location.href=''"
 								/>
 							</div>
 							<div class="dashboard-profile d-flex gap-4 ms-5">
@@ -119,87 +115,88 @@
 		<main>
 			<section class="main-sec mt-5 pt-5 d-flex gap-5">
 				<!-- side navbar -->
-				<div class="sidebar d-flex flex-column gap-4 ps-3">
+				<div class="sidebar d-flex flex-column gap-4">
 					<div class="profile-wrapper d-flex gap-3 mt-4">
 						<img
-							src="/Images/Ali.svg"
-							alt="" class="w-50"
+							src="/Images/dashboard-profile.svg"
+							alt=""
+							class="w-50"
 						/>
 						<div class="profile-content">
-							<h2 class="fs-4">Ali <br />Mohammed</h2>
-							<a href="">View profile</a>
+							<h2 class="fs-4">John Doe</h2>
+							<a href="./mentee-profile.html">View profile</a>
 						</div>
 					</div>
 					<div
-						class="links-wrapper d-flex flex-column gap-5 position-fixed-start align-center"
+						class="links-wrapper d-flex flex-column gap-5 position-fixed-start"
 					>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/home-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./Mentee-booking-response.html"
+								class="text-black ms-2"
 								>Home</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/message.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./groups-chats.html"
+								class="text-black ms-2"
 								>Messages</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/booking-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./bookings.html"
+								class="text-black ms-2"
 								>Bookings</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./connections.html"
+								class="text-black ms-2"
 								>Connections</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/milestones-trophy.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./achievements.html"
+								class="text-black ms-2"
 								>Milestones</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/connection-icon.svg"
 								alt=""
 							/>
 							<a
-								href=""
-								class="ms-2"
+								href="./group-sessions.html"
+								class="text-black ms-2"
 								>Group sessions</a
 							>
 						</div>
-						<div class="icon-links">
+						<div class="icon-links ps-3">
 							<img
 								src="/Images/settings-icon.png"
 								alt=""
@@ -207,61 +204,76 @@
 							/>
 							<a
 								href=""
-								class="ms-2"
+								class="text-black ms-2"
 								>Setting</a
 							>
 						</div>
 					</div>
 				</div>
-				<!-- content -->
 				<div class="home-content mt-5 w-100">
-					<h4 class="fs-5 mb-5">Bookings</h4>
-					<a
-						href=""
-						class="me-5 pe-5"
-						>Upcoming</a
-					>
-					<a
-						href=""
-						class="mx-5 px-5 text-black"
-						>Waitlist</a
-					>
-					<a
-						href=""
-						class="ms-5 ps-5 text-black"
-						>History</a
-					>
-					<hr class="w-100 mb-5" />
-					<div class="card text-center mb-3 w-75">
-						<div class="card-body my-5">
-							<h5 class="card-title">Mentorship session with John Doe</h5>
-							<div class="card-text d-flex justify-content-evenly my-5">
-								<div class="card-date d-flex gap-3">
-									<img
-										src="/Images/uit-calender.svg"
-										alt=""
-									/>
-									<p class="fs-5">Mon, Aug 12</p>
-								</div>
-								<div class="card-date d-flex gap-3">
-									<img
-										src="/Images/booking-icon.svg"
-										alt=""
-									/>
-									<p class="fs-5">7:30 PM - 8:00 PM</p>
-								</div>
-							</div>
-							<a
-								href="#"
-								class="btn btn-2 py-2 px-4 fs-5"
-								>Add Connection</a
-							>
-							<a
-								href="../Mentee-dashboard/Ali-chat.html"
-								class="btn btn-light border border-secondary-subtle ms-5 py-2 px-4 fs-5"
-								>Send Message</a
-							>
+					<div class="profile-wrapper d-flex align-items-center w-50 mx-auto">
+						<div class="profile-img">
+							<img
+								src="/Images/group-image.svg"
+								alt=""
+								class="w-100"
+							/>
 						</div>
+						<div class="profile-text ms-3">
+							<h5 class="mb-2">Africa Agility Data Analytics Group</h5>
+							<p class="mb-2">Moreen Garba, John Doe, Samuel.....</p>
+						</div>
+					</div>
+					<hr class="w-100" />
+					<div class="conversation-wrapper w-75">
+						<div class="btn-div d-flex justify-content-center mt-3">
+							<button class="btn btn-1 border rounded-pill px-5 py-1">
+								Today
+							</button>
+						</div>
+						<div class="btn-div d-flex flex-column justify-content-start mt-5">
+							<p>Samuel Ayo</p>
+							<button class="btn btn-2 border border-rounded px-3 py-1 w-75">
+								Hi, Who has the resources for yesterday's session please ?
+							</button>
+						</div>
+						<div
+							class="btn-div d-flex flex-column justify-content-start ms-3 mt-5"
+						>
+							<p>Moreen Garba</p>
+							<button class="btn btn-1 border border-rounded px-5 py-3 w-75">
+								Hi Moreen ! I do have the resources on my notepad. Give me some
+								minutes, I will get it across to you
+							</button>
+						</div>
+						<div
+							class="btn-div d-flex flex-column justify-content-start ms-3 mt-5"
+						>
+							<p>Samuel Ayo</p>
+							<button class="btn btn-2 border border-rounded px-5 py-3 w-75">
+								Oh! Thank You! I will be expecting it.
+							</button>
+						</div>
+						<p class="text-end num-p mt-1">2023</p>
+					</div>
+					<hr class="w-100 my-4" />
+					<div class="input-wrapper d-flex justify-content-center">
+						<img
+							src="/Images/plus.svg"
+							alt=""
+						/>
+                        <img src="/Images/mdi-camera.svg" alt="" class="ms-3">
+						<input
+							type="text"
+							name=""
+							id=""
+							placeholder="Message"
+							class="border rounded-pill w-50 ps-3 py-2 mx-4"
+						/>
+						<img
+							src="/Images/sound-fab.svg"
+							alt=""
+						/>
 					</div>
 				</div>
 			</section>
