--- a/HTML/Mentee-dashboard/bookings.html
+++ b/HTML/Mentee-dashboard/bookings.html
@@ -119,11 +119,11 @@
                     <div class="profile-wrapper d-flex gap-3 mt-4">
                         <img
                             src="/Images/dashboard-profile.svg"
-                            alt=""
+                            alt="" class="w-50"
                         />
                         <div class="profile-content">
                             <h2 class="fs-4">John Doe</h2>
-                            <a href="">View profile</a>
+                            <a href="./mentee-profile.html">View profile</a>
                         </div>
                     </div>
                     <div
@@ -242,17 +242,17 @@
 							>
 							<a
 								href="#"
-								class="btn btn-light border border-secondary-subtle ms-5 py-2 px-4 fs-5"
+								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
 								>Send Message</a
 							>
 							<a
 								href="#"
-								class="btn btn-light border border-secondary-subtle ms-5 py-2 px-4 fs-5"
+								class="btn btn-light border border-secondary-subtle ms-4 py-2 px-4 fs-5"
 								>Reschedule this call</a
 							>
 							<a
 								href="#"
-								class="btn btn-light ms-5 py-2 px-4 fs-5 text-danger"
+								class="btn btn-light py-2 px-4 ms-3 fs-5 text-danger"
 								>Cancle</a
 							>
 						</div>
@@ -260,5 +260,10 @@
                 </div>
             </section>
         </main>
+        <script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+			crossorigin="anonymous"
+		></script>
     </body>
 </html>
