--- a/HTML/Mentee-dashboard/chats.html
+++ b/HTML/Mentee-dashboard/chats.html
@@ -113,11 +113,11 @@
                 <div class="profile-wrapper d-flex gap-3 mt-4">
                     <img
                         src="/Images/dashboard-profile.svg"
-                        alt=""
+                        alt="" class="w-50"
                     />
                     <div class="profile-content">
                         <h2 class="fs-4">John Doe</h2>
-                        <a href="">View profile</a>
+                        <a href="./mentee-profile.html">View profile</a>
                     </div>
                 </div>
                 <div
