--- a/HTML/Mentee-dashboard/groups-chats.html
+++ b/HTML/Mentee-dashboard/groups-chats.html
@@ -113,11 +113,11 @@
                 <div class="profile-wrapper d-flex gap-3 mt-4">
                     <img
                         src="/Images/dashboard-profile.svg"
-                        alt=""
+                        alt="" class="w-50"
                     />
                     <div class="profile-content">
                         <h2 class="fs-4">John Doe</h2>
-                        <a href="">View profile</a>
+                        <a href="./mentee-profile.html">View profile</a>
                     </div>
                 </div>
                 <div
@@ -235,8 +235,10 @@
                             />
                         </div>
                         <div class="profile-text">
-                            <h5 class="mb-2">Africa Agility Data Analysts</h5>
-                            <p class="">Messages</p>
+                            <a href="./ag-group-chat.html">
+                                <h5 class="mb-2">Africa Agility Data Analysts</h5>
+                                <p class="text-black">Messages</p>
+                            </a>
                         
                         </div>
                     </div>
