--- a/index.html
+++ b/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/index.css/header.css">
-    <title>Home</title>
-</head>
-<body>
-    <header>
-      <nav class="navbar">
-        <div class="navbar-brand">
-            <img src="./Images/dashboard-logo.png" alt="">
-        </div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li class="dropdown">
-                <div class="dropdown-link">
-                  <a href="#">Service</a>
-                  <img src="./Images/symbols-arrow-drop-down.svg" alt="" class="dropdown-arrow">
-                </div>
-                <ul class="dropdown-menu" style="display: none;">
-                    <li><a href="#">Mentor</a></li>
-                    <li><a href="#">Mentee</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-        <div class="btn-div">
-          <button class="btn" id="btn-1" type="submit" onclick="window.location.href='./html/LogIn.html'">Login</button>
-          <button class="btn" id="btn-2" type="submit" onclick="window.location.href='./html/SignUp.html'">Sign Up</button>
-      </div>
-    </nav>
-    </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link
+			rel="stylesheet"
+			href="./CSS/index.css/header.css"
+		/>
+		<title>Home</title>
+	</head>
+	<body>
+		<header>
+			<nav class="navbar">
+				<div class="navbar-brand">
+					<img
+						src="./Images/dashboard-logo.png"
+						alt=""
+					/>
+				</div>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About Us</a></li>
+					<li class="dropdown">
+						<div class="dropdown-link">
+							<a href="#">Service</a>
+							<img
+								src="./Images/symbols-arrow-drop-down.svg"
+								alt=""
+								class="dropdown-arrow"
+							/>
+						</div>
+						<ul
+							class="dropdown-menu"
+							style="display: none"
+						>
+							<li><a href="./HTML/Mentor-dashboard/Mentor-dashboard.html">Mentor</a></li>
+							<li><a href="./HTML/Mentee-dashboard/mentee-dashboard-1.html">Mentee</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Contact Us</a></li>
+				</ul>
+				<div class="btn-div">
+					<button
+						class="btn"
+						id="btn-1"
+						type="submit"
+						onclick="window.location.href='./html/LogIn.html'"
+					>
+						Login
+					</button>
+					<button
+						class="btn"
+						id="btn-2"
+						type="submit"
+						onclick="window.location.href='./html/SignUp.html'"
+					>
+						Sign Up
+					</button>
+				</div>
+			</nav>
+		</header>
 
-    
-    <script src="./index.js"></script>
-</body>
+		<script src="./index.js"></script>
+	</body>
 </html>
