index.html modified

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 				<ul>
 					<li><a href="#">Home</a></li>
-					<li><a href="#">About Us</a></li>
+					<li><a href="./HTML/AboutUs.html">About Us</a></li>
 					<li class="dropdown">
 						<div class="dropdown-link">
 							<a href="#">Service</a>
@@ -33,6 +33,7 @@
 								class="dropdown-arrow"
 							/>
 						</div>
+						<!-- /HTML/Mentor-dashboard/Mentor-dashboard.html -->
 						<ul
 							class="dropdown-menu"
 							style="display: none"
@@ -41,7 +42,7 @@
 							<li><a href="./HTML/Mentee-dashboard/mentee-dashboard-1.html">Mentee</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="./HTML/Contact.html">Contact Us</a></li>
 				</ul>
 				<div class="btn-div">
 					<button
