html files updated

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -20,8 +20,8 @@
       <nav>
         <div><img src="../Images/BRAND LOGO.png" alt="Agyist Logo" /></div>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Find Mentors</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./Mentor-dashboard/Mentor-dashboard.html">Find Mentors</a></li>
           <li><a href="">Services</a></li>
           <li><a href="#">About Us</a></li>
           <li><a href="../HTML/contact.html">Contact</a></li>
