--- a/HTML/Mentor-dashboard/Mentor-dashboard.html
+++ b/HTML/Mentor-dashboard/Mentor-dashboard.html
@@ -139,7 +139,7 @@
 								alt=""
 							/>
 							<a
-								href=""
+								href=".../index.html"
 								class="ms-2"
 								>Home</a
 							>
