added a signup page connection

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					/>
 				</div>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Us</a></li>
+					<li><a href="./index.html">Home</a></li>
+					<li><a href="./HTML/AboutUs.html">About Us</a></li>
 					<li class="dropdown">
 						<div class="dropdown-link">
 							<a href="#">Service</a>
@@ -41,14 +41,14 @@
 							<li><a href="./HTML/Mentee-dashboard/mentee-dashboard-1.html">Mentee</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="./HTML/Contact.html">Contact Us</a></li>
 				</ul>
 				<div class="btn-div">
 					<button
 						class="btn"
 						id="btn-1"
 						type="submit"
-						onclick="window.location.href='./html/LogIn.html'"
+						onclick="window.location.href='./HTML/LogIn.html'"
 					>
 						Login
 					</button>
@@ -56,7 +56,7 @@
 						class="btn"
 						id="btn-2"
 						type="submit"
-						onclick="window.location.href='./html/SignUp.html'"
+						onclick="window.location.href='./HTML/SignUp.html'"
 					>
 						Sign Up
 					</button>
