--- a/HTML/Mentee-dashboard/mentee-dashboard-1.html
+++ b/HTML/Mentee-dashboard/mentee-dashboard-1.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg fixed-top ps-5">
+			<nav class="navbar nav-normal navbar-expand-lg fixed-top ps-5">
 				<div class="container-fluid d-flex justify-content-evenly">
 					<a
 						class="navbar-brand"
@@ -111,11 +111,229 @@
 					</div>
 				</div>
 			</nav>
+			<nav class="nav-bar navbar navbar-expand fixed-bottom">
+				<div class="container-fluid d-flex justify-content-between py-3">
+					<!-- <a
+						class="navbar-brand"
+						href="#"
+					>
+						<img
+							src="/Images/dashboard-logo.png"
+							alt=""
+							class=""
+						/>
+					</a> -->
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarTogglerDemo02"
+						aria-controls="navbarTogglerDemo02"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div
+						class="collapse navbar-collapse"
+						id="navbarTogglerDemo02"
+					>
+						<ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-5">
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/index.html"
+									>
+									<img src="/Images/home-icon.svg" alt="">
+									</a
+								>
+							</li>
+							<!-- <li class="nav-item">
+								<a
+									class="nav-link fs-5"
+									id="nav-link2"
+									href="#"
+									>Dashboard</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link fs-5"
+									id="nav-link2"
+									href="#"
+									>Responses</a
+								>
+							</li> -->
+							<div class="btn-div d-flex gap-4 position-relative">
+								<input
+									type="search"
+									name=""
+									id=""
+									placeholder="Search for mentors"
+									class="btn btn-1 border border-black rounded-pill px-5 py-2 d-flex gap-5"
+									type="submit"
+								/>
+								<img
+									src="/Images/symbols-search.svg"
+									alt=""
+									class="position-absolute top-50 end-0 translate-middle-y me-3"
+									onclick="window.location.href=''"
+								/>
+							</div>
+							<div class="dashboard-profile d-flex gap-4">
+								<img
+									src="/Images/message.svg"
+									alt=""
+								/>
+								<img
+									src="/Images/ci-bell-notification.svg"
+									alt=""
+								/>
+								<img
+									src="/Images/dashboard-profile.svg"
+									alt=""
+								/>
+								<img
+									src="/Images/symbols-arrow-drop-down.svg"
+									alt=""
+								/>
+							</div>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<nav class="nav-bar-2 navbar navbar-expand-lg">
+				<div class="container-fluid d-flex justify-content-evenly py-1">
+					<a
+						class="navbar-brand nav-img"
+						href="./mentee-profile.html" class=""
+					>
+						<img
+							src="/Images/dashboard-profile.svg"
+							alt=""
+						/>
+				    </a>
+						
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarTogglerDemo02"
+						aria-controls="navbarTogglerDemo02"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div
+						class="collapse navbar-collapse"
+						id="navbarTogglerDemo02"
+					>
+						<ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-5">
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/index.html"
+									>
+									<img src="/Images/home-icon.svg" alt="">
+									Home</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/HTML/Mentee-dashboard/chats.html"
+									>
+									<img src="/Images/message.svg" alt="">
+									Messages</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/HTML/Mentee-dashboard/bookings.html"
+									>
+									<img src="/Images/booking-icon.svg" alt="">
+									Bookings</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/HTML/Mentee-dashboard/connections.html"
+									>
+									<img src="/Images/connection-icon.svg" alt="">
+									Connections</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/HTML/Mentee-dashboard/achievements.html"
+									>
+									<img src="/Images/milestones-trophy.svg" alt="">
+									Milestones</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/HTML/Mentee-dashboard/group-sessions.html"
+									>
+									<img src="/Images/connection-icon.svg" alt="">
+									Group Sessions</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link active fs-5"
+									id="first-link"
+									aria-current="page"
+									href="/HTML/"
+									>
+									<img src="/Images/settings-icon.png" alt="" class="settings-icon">
+									Settings</a
+								>
+							</li>
+							<!-- <li class="nav-item">
+								<a
+									class="nav-link fs-5"
+									id="nav-link2"
+									href="#"
+									>Dashboard</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link fs-5"
+									id="nav-link2"
+									href="#"
+									>Responses</a
+								>
+							</li> -->
+						</ul>
+					</div>
+				</div>
+			</nav>
 		</header>
 		<main>
 			<section class="main-sec mt-5 pt-5 d-flex gap-5">
 				<!-- side navbar -->
-				<div class="sidebar d-flex flex-column gap-4">
+				<aside class="sidebar d-flex flex-column gap-4">
 					<div class="profile-wrapper d-flex gap-3 mt-4">
 						<img
 							src="/Images/dashboard-profile.svg"
@@ -209,7 +427,7 @@
 							>
 						</div>
 					</div>
-				</div>
+				</aside>
 				<div class="home-content mt-5 w-100">
 					<h4>Hello, John!</h4>
 					<p>Good morning!</p>
