footer added to index file

--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -55,8 +55,8 @@
 								href=""
 								class="px-5 text-primary"
 							>
-								Subscribe Now!
-							</a>
+							Subscribe Now!
+						</a>
 						</button>
 					</form>
 					<div
@@ -71,14 +71,14 @@
 								<li><a href="">Contact Us</a></li>
 							</ul>
 						</div>
-						<div class="product-links">
+						<div class="platform-links">
 							<h3 class="text-uppercase mb-2">Product</h3>
 							<ul>
 								<li><a href="">Blog</a></li>
 								<li><a href="">Community</a></li>
 							</ul>
 						</div>
-						<div class="legal-links">
+						<div class="platform-links">
 							<h3 class="text-uppercase mb-2">Legal</h3>
 							<ul>
 								<li><a href="">Terms and Conditions</a></li>
