added mentor and mentee dropdown buttons in the header

--- a/HTML/mentor_signup2.html
+++ b/HTML/mentor_signup2.html
@@ -162,8 +162,8 @@
 							/>
 						</div>
 						<div class="btn-div d-flex justify-content-evenly ">
-                            <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='Mentor_signup.html'">Back</button>
-                            <button class="btn btn-lg text-light" >Next</button>
+                            <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='./Mentor_signup.html'">Back</button>
+                            <button class="btn btn-lg text-light" onclick="window.location.href='./mentor_signup3.html'">Next</button>
                         </div>
 					</form>
 					<p class="text-center my-5">
