--- a/HTML/mentor_signup3.html
+++ b/HTML/mentor_signup3.html
@@ -111,8 +111,8 @@
 						</div>
                       
 						<div class="btn-div d-flex justify-content-evenly pt-5 ">
-                            <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='Mentor_signup2.html'">Back</button>
-                            <button class="btn btn-lg text-light " type ="submit" >Finish</button>
+                            <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='./mentor_signup2.html'">Back</button>
+                            <button class="btn btn-lg text-light " type ="submit" onclick="window.location.href='./signup_successful.html'">Finish</button>
                         </div>
 					</form>
 					<p class="text-center my-5">
