--- a/HTML/Mentor_signup.html
+++ b/HTML/Mentor_signup.html
@@ -438,7 +438,7 @@
 						<button
 							class="btn signup-btn w-100 text-white py-2 fs-5" 
 							type="submit"
-							onclick="window.location.href='signup-successfull.html'"
+							onclick="window.location.href='./mentor_signup2.html'"
 						>
 							Next
 						</button>
