footer added to this branch

--- a/index.html
+++ b/index.html
@@ -349,7 +349,103 @@
       </div>
     </section>
   </main>
+<!-- footer -->
 
+<footer>
+  <div class="footer-wrapper">
+    <div class="footer-logo">
+      <img src="./Images/BRAND LOGO.png" alt="">
+    </div>
+    <div class="footer-content-wrapper">
+      <form action="">
+        <input type="email" name="" id="" placeholder="Your Email" style="color: white; text-align: justify; font-size: large;">
+        <button><a href="">Subscribe Now!</a></button>
+      </form>
+      <div class="footer-links">
+        <div class="platform-links">
+          <h3 class="text-uppercase mb-2">Platform</h3>
+          <ul>
+            <li><a href="">Find Mentor</a></li>
+            <li><a href="">Become a Mentor</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="platform-links">
+          <h3 class="text-uppercase mb-2">Product</h3>
+          <ul>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Community</a></li>
+          </ul>
+        </div>
+        <div class="platform-links">
+          <h3 class="text-uppercase mb-2">Legal</h3>
+          <ul>
+            <li><a href="">Terms and Conditions</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">FAQs</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr/>
+      <div class="copyright">
+        <p class="text-white d-flex align-items-center gap-3">
+          <span class="fs-3 text-white">©</span> All rights reserved 2023
+        </p>
+        <form action="">
+          <img class="web"
+            src="../Images/web.svg"
+            alt=""
+          />
+          <select
+            name="role"
+            id="role"
+            class=" py-2 ps-4 text-white bg-transparent border border-0"
+          >
+            <option
+              value=""
+              selected
+              disabled
+              class="bg-transparent"
+            >
+              English
+            </option>
+            <option value="">French</option>
+            <option value="">German</option>
+            <option value="">Spanish</option>
+          </select>
+        </form>
+        <div class="online-links-wrappers">
+          <a href="">
+            <img
+                            src="../Images/instagram.svg"
+                            alt=""
+                          />
+          </a>
+          <a href="">
+            <img
+                            src="../Images/youtube-fill.svg"
+                            alt=""
+                          />
+          </a>
+          <a href="">
+            <img
+                            src="../Images/footer-facebook.svg"
+                            alt=""
+                          />
+          </a>
+          <a href="">
+            <img
+                            src="../Images/footer-linkedin.svg"
+                            alt=""
+                          />
+          </a>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+ </footer>
 
   <script src="./index.js"></script>
 </body>
