footer image updated

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 <footer>
   <div class="footer-wrapper">
     <div class="footer-logo">
-      <img src="./Images/BRAND LOGO.png" alt="">
+      <img src="./Images/Agilyst_BRAND_LOGO.png" alt="">
     </div>
     <div class="footer-content-wrapper">
       <form action="">
