--- a/HTML/SignUp_Mentee.html
+++ b/HTML/SignUp_Mentee.html
@@ -155,7 +155,7 @@
 						<button
 							class="btn signup-btn w-100 text-white py-2 fs-5" 
 							type="submit"
-							onclick="window.location.href='signup-successfull.html'"
+							onclick="window.location.href='signup_successful.html'"
 						>
 							Sign up
 						</button>
