service button updated

--- a/HTML/SignUp_Mentee.html
+++ b/HTML/SignUp_Mentee.html
@@ -155,6 +155,7 @@
 						<button
 							class="btn signup-btn w-100 text-white py-2 fs-5" 
 							type="submit"
+							
 							onclick="window.location.href='signup_successful.html'"
 						>
 							Sign up
@@ -219,6 +220,7 @@
 			integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 			crossorigin="anonymous"
 		></script>
-		<script src="../signup.js"></script>
+		
+		<script src="../new.js"></script>
 	</body>
 </html>
