--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			  <ul class="navlist">
 				<li><a href="./index.html">Home</a></li>
 				<li><a href="/HTML/AboutUs.html">About Us</a></li>
-				<li id="service"><a href="#">Services +</a>
+				<li id="service"><a href="#">Services</a>
 				  <ul id="list">
-					<li><a href="./HTML/Mentor-dashboard/Mentor-dashboard.html">Mentor</a></li>
-					<li><a href="./HTML/Mentee-dashboard/mentee-dashboard-1.html">Mentee</a></li>
+					<li><a href="./HTML/Mentor-dashboard/Mentor-dashboard.html">Agile couching</a></li>
+					<li><a href="./HTML/Mentee-dashboard/mentee-dashboard-1.html">Mentorship</a></li>
 				  </ul>
 				</li>
 				<li><a href="./HTML/Contact.html">Contact Us</a></li>
