added mentee and agile coach files

--- a/HTML/Agile-Coach/dashboard1.html
+++ b/HTML/Agile-Coach/dashboard1.html
@@ -65,7 +65,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="../AgileCoaches-dashboard/agile-coach-dashboard.html"
 									>Dashboard</a
 								>
 							</li>
@@ -141,17 +141,6 @@
 							<a
 								href=""
 								class="text-black ms-2"
-								>Home</a
-							>
-						</div>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/home-icon.svg"
-								alt=""
-							/>
-							<a
-								href=""
-								class="text-black ms-2"
 								>Waitlist</a
 							>
 						</div>
@@ -208,7 +197,7 @@
 							<a
 								href=""
 								class="text-black ms-2"
-								>Setting</a
+								>Settings</a
 							>
 						</div>
 					</div>
