--- a/HTML/AgileCoaches-dashboard/agile-coach-dashboard.html
+++ b/HTML/AgileCoaches-dashboard/agile-coach-dashboard.html
@@ -65,7 +65,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="./agile-coach-dashboard.html"
 									>Dashboard</a
 								>
 							</li>
@@ -222,17 +222,17 @@
 					<div class="profile">
 						<h3 >Profile</h3>
 					<hr class="w-75 pt-1">
-						<div class="profile-content d-flex gap-3 ">
-							<img  src="/Images/coach_Steave.jpeg" alt="">
+						<div class="profile-content d-flex gap-3 w-100">
+							<img  src="/Images/Steve-1.svg" alt="">
 							<div class="profile-text">
 								<h3>Steve Brishton</h3 >
 								<div class="contact">
-									<p>Coach Contact</p>
+									<p>Coach Contact</p> <br>
 									<span><a href=""><i class="fa-solid fa-comments px-3 fs-3"></a></i></span>
 									<span><a href=""><i class="fa-solid fa-video px-3 fs-3"></a></i></span>
 									<span><a href=""><i class="fa-solid fa-phone ps-3 fs-3"></i></a></span>
 								</div>
-								 <div><p>Rating</p>
+								 <div class="d-flex flex-nowrap align-items-center"><p>Rating</p>
 									<i class="fa-solid fa-star px-1 fs-4"></i>
 									<i class="fa-solid fa-star px-1 fs-4"></i>
 									<i class="fa-solid fa-star px-1 fs-4"></i>
@@ -246,23 +246,23 @@
 					</div>
 					<div class="my-5 fs-4">
                         <a class="first"
-                                                href=""
+                                                href="./agile-coach-dashboard.html"
                                                 class="me-5 pe-5"
                                                 >Upcoming</a
                                             >
                                             <a
-                                                href=""
+                                                href="../Agile-Coach/waitlist.html"
                                                 class="mx-5 px-5 text-black"
                                                 >Waitlist</a
                                             >
                                             <a
-                                                href=""
+                                                href="../Agile-Coach/history.html"
                                                 class="ms-5 ps-5 text-black"
                                                 >History</a
                                             >
                     </div>
 					
-					<div class="card text-center mb-3 w-75">
+					<div class="card text-center mb-5 w-75">
 						<div class="card-body my-5">
 							<h5 class="card-title ">Agile Coaching Session with the Treasurestrove Agencies Limited</h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
@@ -284,7 +284,7 @@
 							<a
 								href="#"
 								class="btn btn-2 py-2 px-4 fs-5"
-								>Add Connection</a
+								>Join Meeting</a
 							>
 							<a
 								href="../Mentee-dashboard/Ali-chat.html"
@@ -294,25 +294,7 @@
 						</div>
 					</div>
 
-                    <div class="my-5 fs-4">
-                        <a class="first"
-                                                href=""
-                                                class="me-5 pe-5"
-                                                >Upcoming</a
-                                            >
-                                            <a
-                                                href=""
-                                                class="mx-5 px-5 text-black"
-                                                >Waitlist</a
-                                            >
-                                            <a
-                                                href=""
-                                                class="ms-5 ps-5 text-black"
-                                                >History</a
-                                            >
-                    </div>
-
-                    <div class="card text-center mb-3 w-75">
+                    <div class="card text-center mb-5 w-75">
 						<div class="card-body my-5">
 							<h5 class="card-title ">Agile Coaching Session with Joe Blendine</h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
@@ -334,7 +316,7 @@
 							<a
 								href="#"
 								class="btn btn-2 py-2 px-4 fs-5"
-								>Add Connection</a
+								>Join Meeting</a
 							>
 							<a
 								href="../Mentee-dashboard/Ali-chat.html"
@@ -344,25 +326,8 @@
 						</div>
 					</div>
 
-                    <div class="my-5 fs-4">
-                        <a class="first"
-                                                href=""
-                                                class="me-5 pe-5"
-                                                >Upcoming</a
-                                            >
-                                            <a
-                                                href=""
-                                                class="mx-5 px-5 text-black"
-                                                >Waitlist</a
-                                            >
-                                            <a
-                                                href=""
-                                                class="ms-5 ps-5 text-black"
-                                                >History</a
-                                            >
-                    </div>
 
-                    <div class="card text-center mb-3 w-75">
+                    <div class="card text-center mb-5 w-75 ">
 						<div class="card-body my-5">
 							<h5 class="card-title ">Agile Coaching Session with Singham Consultancy</h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
@@ -384,7 +349,7 @@
 							<a
 								href="#"
 								class="btn btn-2 py-2 px-4 fs-5"
-								>Add Connection</a
+								>Join Meeting</a
 							>
 							<a
 								href="../Mentee-dashboard/Ali-chat.html"
@@ -394,27 +359,9 @@
 						</div>
 					</div>
 
-                    <div class="my-5 fs-4">
-                        <a class="first"
-                                                href=""
-                                                class="me-5 pe-5"
-                                                >Upcoming</a
-                                            >
-                                            <a
-                                                href=""
-                                                class="mx-5 px-5 text-black"
-                                                >Waitlist</a
-                                            >
-                                            <a
-                                                href=""
-                                                class="ms-5 ps-5 text-black"
-                                                >History</a
-                                            >
-                    </div>
-
                     <div class="card text-center mb-3 w-75">
 						<div class="card-body my-5">
-							<h5 class="card-title ">Mentorship session with John Doe</h5>
+							<h5 class="card-title ">Agile Coaching session with John Doe</h5>
 							<div class="card-text d-flex justify-content-evenly my-5">
 								<div class="card-date d-flex gap-3">
 									<img
@@ -434,7 +381,7 @@
 							<a
 								href="#"
 								class="btn btn-2 py-2 px-4 fs-5"
-								>Add Connection</a
+								>Join Meeting</a
 							>
 							<a
 								href="../Mentee-dashboard/Ali-chat.html"
