--- a/HTML/Agile-Coach/dashboard5.html
+++ b/HTML/Agile-Coach/dashboard5.html
@@ -65,7 +65,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="../AgileCoaches-dashboard/agile-coach-dashboard.html"
 									>Dashboard</a
 								>
 							</li>
@@ -133,17 +133,6 @@
 					<div
 						class="links-wrapper d-flex flex-column gap-5 position-fixed-start"
 					>
-						<div class="icon-links ps-3">
-							<img
-								src="/Images/home-icon.svg"
-								alt=""
-							/>
-							<a
-								href=""
-								class="text-black ms-2"
-								>Home</a
-							>
-						</div>
 						<div class="icon-links ps-3">
 							<img
 								src="/Images/home-icon.svg"
