--- a/HTML/LogIn.html
+++ b/HTML/LogIn.html
@@ -28,6 +28,45 @@
 		<title>Login Page</title>
 	</head>
 	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg fixed-top py-2 px-5 mx-auto">
+				<div class="container-fluid gap-md-5">
+					<a class="navbar-brand" href="#">
+						<img src="/Images/Agilyst_BRAND_LOGO.png" alt="">
+					</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
+							<li class="nav-item">
+								<a class="nav-link active bg-transparent" id="first-link" aria-current="page" href="/index.html">Home</a>
+							</li>
+							<li class="nav-item">
+							  <a class="nav-link" id="nav-link2" href="#">About us</a>
+						  </li>
+							<li class="nav-item dropdown">
+								<a class="nav-link  dropdown-toggle fs-5" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu">
+									<li><a class="dropdown-item text-black" href="./html/content.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-black" href="./html/download.html">Mentorship</a></li>
+								</ul>
+							</li>  
+							
+							<li class="nav-item">
+								<a class="nav-link" id="nav-link3" href="./html/about.html">Contact Us</a>
+							</li>
+						</ul>
+						<div class="btn-div d-flex gap-4">
+							<button class="btn btn-1 border border-rounded px-5 py-2" type="submit" onclick="window.location.href='../html/LogIn.html'">Login</button>
+							<button class="btn btn-2 btn-outline-light px-5 py-2 me-5" type="submit" onclick="window.location.href='../html/SignUp.html'">Sign Up</button>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</header>
 		<section class="login-section w-100">
 			<div class="login-container d-flex justify-content-between">
 				<div class="login-image-wrapper">
@@ -76,11 +115,19 @@
 						<button
 							class="btn login-btn w-100 text-white mt-4 py-2 fs-5"
 							type="submit"
-							onclick="window.location.href='./Mentee-dashboard/mentee-dashboard-1.html'"
+							onclick="window.location.href='./Mentee-dashboard/profile-fill.html'"
 						>
 							Log in
 						</button>
 					</form>
+					<p class="text-center my-5">
+						Don't have an accout?
+						<a
+							href="./SignUp_Mentee.html"
+							class="reset-a ms-1"
+							>Sign Up</a
+						>
+					</p>
 					<p class="text-center my-5">
 						Forgot your Password?
 						<a
@@ -90,7 +137,7 @@
 						>
 					</p>
 					<p class="text-center w-75 mx-auto mb-5">
-						By Logging in, you agree to our Terms of Use and Privacy policy.
+						By Logging in, you agree to our <a href="https://docs.google.com/document/d/14Cav8_tpLhMj1wqa7y7p3TokV7CuWWWVGshoX72YPZo/edit">Terms of Use</a> and <a href="https://docs.google.com/document/d/12t_hjWHDg7Qe-BcslnpuhAd6RPmMWPe2E11MokK6itI/edit?usp=drivesdk">Privacy policy</a>.
 					</p>
 					<div class="login-options">
 						<hr>
@@ -119,10 +166,6 @@
 							</a>
 						</button>
 					</div>
-					<div class="home-wrapper d-flex align-items-center gap-4 mt-5">
-                        <img src="/Images/home-icon.svg" alt="" class="">
-                        <a href="/index.html" class="fs-5">Return to Home Page</a>
-                    </div>
 				</div>
 			</div>
 		</section>
