--- a/HTML/Mentee-dashboard/Ali-chat.html
+++ b/HTML/Mentee-dashboard/Ali-chat.html
@@ -47,7 +47,7 @@
                                 class="nav-link active fs-5"
                                 id="first-link"
                                 aria-current="page"
-                                href="/index.html"
+                                href="../landingpage.html"
                                 >Home</a
                             >
                         </li>
@@ -108,102 +108,8 @@
     </header>
     <main>
         <section class="main-sec mt-5 pt-5 d-flex gap-5">
-            <div class="sidebar d-flex flex-column gap-4">
-                <div class="profile-wrapper d-flex gap-3 mt-4">
-                    <img
-                        src="/Images/dashboard-profile.svg"
-                        alt="" class="w-50"
-                    />
-                    <div class="profile-content">
-                        <h2 class="fs-4">John Doe</h2>
-                        <a href="./mentee-profile.html">View profile</a>
-                    </div>
-                </div>
-                <div
-                    class="links-wrapper d-flex flex-column gap-5 position-fixed-start"
-                >
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/home-icon.svg"
-                            alt=""
-                        />
-                        <a
-                            href=""
-                            class="text-black ms-2"
-                            >Home</a
-                        >
-                    </div>
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/message.svg"
-                            alt=""
-                        />
-                        <a
-                            href="./groups-chats.html"
-                            class="text-black ms-2"
-                            >Messages</a
-                        >
-                    </div>
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/booking-icon.svg"
-                            alt=""
-                        />
-                        <a
-                            href="./bookings.html"
-                            class="text-black ms-2"
-                            >Bookings</a
-                        >
-                    </div>
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/connection-icon.svg"
-                            alt=""
-                        />
-                        <a
-                            href="./connections.html"
-                            class="text-black ms-2"
-                            >Connections</a
-                        >
-                    </div>
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/milestones-trophy.svg"
-                            alt=""
-                        />
-                        <a
-                            href="./achievements.html"
-                            class="text-black ms-2"
-                            >Milestones</a
-                        >
-                    </div>
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/connection-icon.svg"
-                            alt=""
-                        />
-                        <a
-                            href="./group-sessions.html"
-                            class="text-black ms-2"
-                            >Group sessions</a
-                        >
-                    </div>
-                    <div class="icon-links ps-3">
-                        <img
-                            src="/Images/settings-icon.png"
-                            alt=""
-                            class="settings-icon"
-                        />
-                        <a
-                            href=""
-                            class="text-black ms-2"
-                            >Setting</a
-                        >
-                    </div>
-                </div>
-                
-            </div>
-            <div class="home-content mt-5 w-100">
+            
+            <div class="home-content mt-5">
                 <div class="profile-wrapper d-flex align-items-center">
                     <div class="profile-img">
                         <img
