--- a/HTML/Mentee-dashboard/book-mentor.html
+++ b/HTML/Mentee-dashboard/book-mentor.html
@@ -61,7 +61,7 @@
 								<a
 									class="nav-link fs-5"
 									id="nav-link2"
-									href="#"
+									href="mentee-dashboard-1.html"
 									>Dashboard</a
 								>
 							</li>
@@ -138,7 +138,7 @@
 							<a
 								href="./Mentee-booking-response.html"
 								class="text-black ms-2"
-								>Home</a
+								>Waitlist</a
 							>
 						</div>
 						<div class="icon-links ps-3">
