--- a/HTML/mentor_signup3.html
+++ b/HTML/mentor_signup3.html
@@ -27,6 +27,45 @@
 		<title>Mentor Signup Page</title>
 	</head>
 	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg fixed-top py-2 px-5 mx-auto">
+				<div class="container-fluid gap-md-5">
+					<a class="navbar-brand" href="#">
+						<img src="/Images/Agilyst_BRAND_LOGO.png" alt="">
+					</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
+							<li class="nav-item">
+								<a class="nav-link active bg-transparent" id="first-link" aria-current="page" href="/index.html">Home</a>
+							</li>
+							<li class="nav-item">
+							  <a class="nav-link" id="nav-link2" href="#">About us</a>
+						  </li>
+							<li class="nav-item dropdown">
+								<a class="nav-link  dropdown-toggle fs-5" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="nav-link1">
+									Services
+								</a>
+								<ul class="dropdown-menu">
+									<li><a class="dropdown-item text-black" href="./html/content.html">Agile Coaching</a></li>
+									<li><a class="dropdown-item text-black" href="./html/download.html">Mentorship</a></li>
+								</ul>
+							</li>  
+							
+							<li class="nav-item">
+								<a class="nav-link" id="nav-link3" href="./html/about.html">Contact Us</a>
+							</li>
+						</ul>
+						<div class="btn-div d-flex gap-4">
+							<button class="btn btn-1 border border-rounded px-5 py-2" type="submit" onclick="window.location.href='../html/LogIn.html'">Login</button>
+							<button class="btn btn-2 btn-outline-light px-5 py-2 me-5" type="submit" onclick="window.location.href='../html/SignUp.html'">Sign Up</button>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</header>
 		<section class="signup-section w-100">
 			<div class="signup-container d-flex justify-content-between">
 				<div class="signup-image-wrapper">
@@ -110,7 +149,7 @@
 							</select>
 						</div>
                       
-						<div class="btn-div d-flex justify-content-evenly pt-5 ">
+						<div class="div-btn d-flex justify-content-evenly pt-5 ">
                             <button class="btn btn-lg text-light" type="submit" onclick="window.location.href='./mentor_signup2.html'">Back</button>
                             <button class="btn btn-lg text-light " type ="submit" onclick="window.location.href='./Mentor_signup_successful.html'">Finish</button>
                         </div>
